--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
 <div class="container">
-    <h1>Zombie Survival RPG Game!</h1>
+    <h1 id="title">Zombie Survival RPG Game!</h1>
     <div id="characterSelection">
     </div>
-    <div class="col-lg-6 float-left">
+    <div class="col-md-6 float-left clearfix">
         <h2>Your Character</h2>
         <div id="character">
 
@@ -33,7 +33,7 @@
 
         <button id="restart" class="btn btn-success">Restart</button>
     </div>
-    <div class="col-lg-6 float-left ">
+    <div class="col-md-6 float-left clearfix">
         <h2>Defender</h2>
         <div id="defender">
         </div>
