--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Amatic+SC:700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
+
 
 </head>
 
@@ -38,29 +38,29 @@
         </div>
 
         <div class="row-md-12 text-white">
-            <div id="characterSelection" class="pb-4">
+            <div id="characterSelection" class="pb-4 text-center">
             </div>
-            <div class="row-md-12">
-                <div class="col-md-5 float-left">
+            <div class="row text-center">
+                <div class="col-sm-4">
                     <h2>Your Character</h2>
                     <div id="character">
 
                     </div>
                     <!-- Fight Section -->
-                    <div class="col-md-2 center">
+                    <div class="col-md-2">
                         <div id="fightSection" class="fightButton">
                             <!-- Attack Button -->
                             <button id="attack" class="btn btn-danger">Attack!</button>
                         </div>
                         <!-- Status -->
-                        <div id="status" class="text-white clearfix">
+                        <div id="status" class="text-white">
                         </div>
                         <!-- Restart Button -->
                         <button id="restart" class="btn btn-success">Restart</button>
                     </div>
                 </div>
                 <!-- Defender and Enemies -->
-                <div class="col-md-5 float-left">
+                <div class="col-md-4">
                     <h2>Defender</h2>
                     <div id="defender">
                     </div>
