--- a/index.html
+++ b/index.html
@@ -40,27 +40,26 @@
         <div class="row-md-12 text-white">
             <div id="characterSelection" class="pb-4 text-center">
             </div>
-            <div class="row text-center">
-                <div class="col-sm-4">
+            <div class="row-fluid content-center">
+                <div class="span-md-4">
                     <h2>Your Character</h2>
                     <div id="character">
 
                     </div>
                     <!-- Fight Section -->
-                    <div class="col-md-2">
-                        <div id="fightSection" class="fightButton">
-                            <!-- Attack Button -->
-                            <button id="attack" class="btn btn-danger">Attack!</button>
-                        </div>
-                        <!-- Status -->
-                        <div id="status" class="text-white">
-                        </div>
-                        <!-- Restart Button -->
-                        <button id="restart" class="btn btn-success">Restart</button>
+
+                    <div id="fightSection" class="col-md-2 fightButton overflow-hidden">
+                        <!-- Attack Button -->
+                        <button id="attack" class="btn btn-danger mb-4">Attack!</button>
+                    </div>
+                    <!-- Restart Button -->
+                    <button id="restart" class="btn btn-success">Restart</button>
+                    <!-- Status -->
+                    <div id="status" class="text-white">
                     </div>
                 </div>
                 <!-- Defender and Enemies -->
-                <div class="col-md-4">
+                <div class="span-md-4 pt-2">
                     <h2>Defender</h2>
                     <div id="defender">
                     </div>
