Push column centered

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <!-- Fight Section -->
 
-                    <div id="fightSection" class="col-md-2 fightButton overflow-hidden">
+                    <div id="fightSection" class="span-md-2 fightButton overflow-hidden">
                         <!-- Attack Button -->
                         <button id="attack" class="btn btn-danger mb-4">Attack!</button>
                     </div>
