fix restart button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
         <!-- Title Row -->
-        <div class="row-md-12">
+        <div class="row-md-12 mt-3">
             <div>
                 <h1 id="title">Zombie Survival RPG Game!</h1>
             </div>
@@ -48,14 +48,17 @@
                     </div>
                     <!-- Fight Section -->
 
-                    <div id="fightSection" class="span-md-2 fightButton overflow-hidden">
+                    <div id="fightSection" class="span-md-2 fightButton">
+                        
                         <!-- Attack Button -->
                         <button id="attack" class="btn btn-danger mb-4">Attack!</button>
-                    </div>
-                    <!-- Restart Button -->
-                    <button id="restart" class="btn btn-success">Restart</button>
-                    <!-- Status -->
-                    <div id="status" class="text-white">
+
+                        <!-- Restart Button -->
+                        <button id="restart" class="btn btn-success">Restart</button>
+
+                        <!-- Status -->
+                        <div id="status" class="text-white">
+                        </div>
                     </div>
                 </div>
                 <!-- Defender and Enemies -->
