--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <hr style="background-color: white">
         <!-- Characters -->
-        <div class="row-md-12 text-center text-white pb-4">
+        <div class="row-md-12 text-center text-white pt-3 pb-4">
             <h2> How To Play </h2>
             <ul class="list-group" id="listGroup">
                 <li class="list-group">Click a character to play!</li>
@@ -54,7 +54,7 @@
                         <button id="attack" class="btn btn-danger mb-4">Attack!</button>
 
                         <!-- Restart Button -->
-                        <button id="restart" class="btn btn-success">Restart</button>
+                        <button id="restart" class="btn btn-success mb-4">Restart</button>
 
                         <!-- Status -->
                         <div id="status" class="text-white">
@@ -75,7 +75,7 @@
 
     </div>
 
-    <footer class="fixed-bottom text-center text-white">
+    <footer class="fixed-bottom text-center text-white pb-3">
         &copy; Copyright 2018
         <img src="./assets/images/shotgun.jpg" width="25px" alt="shotgun" /> Thomas Headle
     </footer>
