--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- container -->
-    <div class="container">
+    <div class="container-fluid">
 
         <!-- Title Row -->
         <div class="row-md-12 mt-3">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <!-- Defender and Enemies -->
-                <div class="span-md-4 pt-2">
+                <div class="span-md-4 pt-2 pb-5">
                     <h2>Defender</h2>
                     <div id="defender">
                     </div>
