--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="list-group">Try to defeat all three in a row!</li>
             </ul>
         </div>
-
+        <!-- Character -->
         <div class="row-md-12 text-white">
             <div id="characterSelection" class="pb-4 text-center">
             </div>
@@ -68,14 +68,14 @@
                     </div>
                     <h2>Enemies</h2>
                     <div id="defenderArea">
-                        
+
                     </div>
                 </div>
             </div>
         </div>
 
     </div>
-
+<!-- Footer with copyright -->
     <footer class="fixed-bottom text-center text-white pb-3">
         &copy; Copyright 2018
         <img src="./assets/images/shotgun.jpg" width="25px" alt="shotgun" /> Thomas Headle
