--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Amatic+SC:700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Amatic+SC:700|Teko|Maven+Pro" rel="stylesheet">
 
 
 </head>
@@ -29,11 +29,11 @@
         <div class="row-md-12 text-center text-white pt-3 pb-4">
             <h2> How To Play </h2>
             <ul class="list-group" id="listGroup">
-                <li class="list-group">Click a character to play!</li>
-                <li class="list-group">Click Attack! to begin attacking</li>
-                <li class="list-group">When the opponenet runs out of HP, you win!</li>
-                <li class="list-group">When you run out of HP, you lose</li>
-                <li class="list-group">Try to defeat all three in a row!</li>
+<li class="list-group"><b>Click a character to play!</b></li>
+<li class="list-group"><b>Click Attack! to begin attacking</b></li>
+<li class="list-group"><b>When the opponenet runs out of HP, you win!</b></li>
+<li class="list-group"><b>When you run out of HP, you lose</b></li>
+<li class="list-group"><b>Try to defeat all three in a row!</b></li>
             </ul>
         </div>
         <!-- Character -->
@@ -75,7 +75,7 @@
         </div>
 
     </div>
-<!-- Footer with copyright -->
+    <!-- Footer with copyright -->
     <footer class="fixed-bottom text-center text-white pb-3">
         &copy; Copyright 2018
         <img src="./assets/images/shotgun.jpg" width="25px" alt="shotgun" /> Thomas Headle
